# tauri-plugin-libsql

./: Cargo.toml  MOBILE.md  README.md  package.json
android/: LibsqlPlugin.kt
examples/app/src/: App.css  App.tsx
examples/app/src-tauri/: Cargo.toml  tauri.conf.json
examples/app/src-tauri/src/: main.rs
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: LibsqlPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: ping.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
