[package]
name = "tauri-plugin-libsql"
version = "0.2.0"
authors = [ "Tauri Community" ]
description = "A Tauri plugin for SQLite database access using libSQL, providing local and remote synchronization capabilities."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-libsql"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"
libsql = "0.9.6"
uuid = { version = "1.7.0", features = ["v4"] }
tokio = { version = "1.36.0", features = ["sync"] }

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
