[package]
name = "tauri-plugin-libsql-example"
version = "0.1.0"
description = "A Tauri App that demonstrates the use of tauri-plugin-libsql"
authors = ["Tauri Community"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.5.0" }

[dependencies]
tauri = { version = "2.5.0", features = ["shell-open"] }
tauri-plugin-libsql = { path = "../../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds. It does not affect app functionality
app = ["tauri/app"]
# enables the development server for hot reloading the GUI in development
custom-protocol = ["tauri/custom-protocol"] 